[gd_scene load_steps=22 format=2]

[ext_resource path="res://Selection.gd" type="Script" id=1]
[ext_resource path="res://buttons/4h.png" type="Texture" id=2]
[ext_resource path="res://buttons/1s.png" type="Texture" id=3]
[ext_resource path="res://buttons/3.png" type="Texture" id=4]
[ext_resource path="res://buttons/4.png" type="Texture" id=5]
[ext_resource path="res://buttons/1.png" type="Texture" id=6]
[ext_resource path="res://buttons/1h.png" type="Texture" id=7]
[ext_resource path="res://buttons/2.png" type="Texture" id=8]
[ext_resource path="res://buttons/2s.png" type="Texture" id=9]
[ext_resource path="res://buttons/2h.png" type="Texture" id=10]
[ext_resource path="res://buttons/3s.png" type="Texture" id=11]
[ext_resource path="res://buttons/4s.png" type="Texture" id=12]
[ext_resource path="res://buttons/3h.png" type="Texture" id=13]
[ext_resource path="res://font53.tres" type="DynamicFont" id=14]
[ext_resource path="res://TextureRect.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sounds/MenuSelection.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/MenuChange.wav" type="AudioStream" id=17]
[ext_resource path="res://Sounds/hard.wav" type="AudioStream" id=18]

[sub_resource type="Theme" id=3]
default_font = ExtResource( 14 )

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Theme" id=4]

[node name="Selection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" parent="." instance=ExtResource( 15 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1326.0
margin_bottom = 728.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1326.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 3 )
text = "QUAL SEU PERSONAGEM FAVORITO ?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 384.0
margin_right = 1326.0
margin_bottom = 728.0
custom_constants/separation = 35
alignment = 1

[node name="Actor1" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
show_behind_parent = true
material = SubResource( 1 )
margin_left = 153.0
margin_right = 379.0
margin_bottom = 344.0
rect_min_size = Vector2( 100, 100 )
focus_neighbour_left = NodePath("../Actor4")
theme = SubResource( 4 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )

[node name="Actor2" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
show_behind_parent = true
material = SubResource( 1 )
margin_left = 414.0
margin_right = 643.0
margin_bottom = 344.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="Actor3" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
show_behind_parent = true
material = SubResource( 1 )
margin_left = 678.0
margin_right = 908.0
margin_bottom = 344.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 13 )
texture_focused = ExtResource( 13 )

[node name="Actor4" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
show_behind_parent = true
material = SubResource( 1 )
margin_left = 943.0
margin_right = 1173.0
margin_bottom = 344.0
rect_min_size = Vector2( 100, 100 )
focus_neighbour_right = NodePath("../Actor1")
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="AudioChange" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="AudioHard" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = 24.0

[node name="AudioSelection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HBoxContainer/Actor1" to="." method="_on_Actor1_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Actor1" to="." method="_on_Actor1_pressed"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HBoxContainer/Actor2" to="." method="_on_Actor2_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Actor2" to="." method="_on_Actor2_pressed"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HBoxContainer/Actor3" to="." method="_on_Actor3_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Actor3" to="." method="_on_Actor3_pressed"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HBoxContainer/Actor4" to="." method="_on_Actor4_focus_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Actor4" to="." method="_on_Actor4_pressed"]
